
2010-08-26  Oliver Haag  <oliver.haag@gmail.com>
* Samplerate values sent to device are calculated now, only limited by hardware
* Added the samplerate formula to the documentation
* Documentation updated with additional information from Oleg
* Removed Oleg from AUTHORS

2010-08-29  Oliver Haag  <oliver.haag@gmail.com>
* DSO details are known after Hantek::Control::connectDevice() is executed
* Removed useless initialization in Hantek::Control
* DSO is started after the settings have been transferred
* Added additional debug messages when building as debug binary
* Added support for DSO-5200

2010-08-31  Oliver Haag  <oliver.haag@gmail.com>
* Added manual command sending with Shift+C when bulding as debug binary
* Fixed some uninitialized values in Hantek::Control
* Added debug messages for capture state when building as debug binary

2010-09-15  Oliver Haag  <oliver.haag@gmail.com>
* Made export dialog title translatable
* Fixed export shortcut
* Added csv export

2010-09-15  Oliver Haag  <oliver.haag@gmail.com>
* Added OSX patches by Florian Schirmer <jolt@tuxbox.org>, thanks :)

2010-09-16  Oliver Haag  <oliver.haag@gmail.com>
* Added csv export return value to doExport method
* Fixed DSO-2150 samplerates

2010-09-21  Oliver Haag  <oliver.haag@gmail.com>
* Fixed print shortcut
* Made samplerate calculation more flexible
* DSO-5200 data conversion bugfix
* Exporter::setFormat not filtering CSV format out anymore
* Removed misplaced " before voltages in exported CSV file

2010-09-27  Oliver Haag  <oliver.haag@gmail.com>
* Some bugfixes for the DSO-5200
* Simplified trigger point calculation and correct handling for fast rate mode
* Recalculating pretrigger position after samplerate changes

2010-09-29  Oliver Haag  <oliver.haag@gmail.com>
* Added spectrums to exported csv files
* Using autocorrelation for frequency detection now
* Some undefined value bugfixes

2010-12-13  Oliver Haag  <oliver.haag@gmail.com>
* Triggermode Auto working correctly now