@@ -105,3 +105,4 @@
 
 2010-12-13  Oliver Haag  <oliver.haag@gmail.com>
 * Triggermode Auto working correctly now
+* Improved frequency detection routine
